--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "fed",
     "toolkits",
     "elements",
-    "components"
+    "components",
+    "css",
+    "javascript",
+    "templates"
   ],
   "author": "Springer Nature",
   "scripts": {
     "build": "npm run lint && npm run test && npm run validate",
     "build:ci": "npm run lint && npm run test:ci && npm run validate -- -n",
     "create": "sn-package-create",
-    "lint": "npm run lint:js",
-    "lint:js": "eslint .",
+    "lint": "util-eslint-runner --name 'lint:js' --pattern '**/packages/**/*.js' && npm run lint:sass",
+    "lint:sass": "sass-lint '**/packages/**/scss/**/*.scss' --verbose --no-exit",
+    "lint:js": "eslint '**/packages/**/*.js'",
     "publish": "sn-package-publish",
     "test": "jest --colors --coverage --passWithNoTests",
     "test:ci": "jest --passWithNoTests --runInBand",
@@ -34,17 +38,21 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/runtime": "^7.5.4",
-    "@springernature/eslint-config": "^2.1.1",
+    "@springernature/eslint-config": "^3.0.0",
     "@springernature/frontend-package-manager": "^3.0.0",
-    "eslint": "^5.16.0",
+    "@springernature/sasslint-config": "^1.2.0",
+    "@springernature/util-eslint-runner": "^0.0.3",
+    "acorn": "^7.1.0",
+    "eslint": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^21.27.2",
-    "eslint-plugin-no-use-extend-native": "^0.3.12",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-unicorn": "^4.0.3",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-no-use-extend-native": "^0.4.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-unicorn": "^12.0.1",
     "jest": "^24.9.0",
-    "lerna": "^3.16.4"
+    "lerna": "^3.16.4",
+    "sass-lint": "^1.13.1"
   },
   "jest": {
     "testURL": "http://localhost/",
@@ -54,10 +62,11 @@
     "verbose": true,
     "testRegex": "__tests__/.*\\.js$",
     "collectCoverageFrom": [
-      "toolkits/**/packages/**/*.js"
+      "**/packages/**/*.js"
     ],
     "coveragePathIgnorePatterns": [
       "docs/"
     ]
-  }
+  },
+  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml"
 }
