--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "build": "npm run lint && npm run test && npm run validate",
     "build:ci": "npm run lint && npm run test:ci && npm run validate -- -n",
     "create": "sn-package-create",
-    "lint": "util-eslint-runner --name 'lint:js' --pattern '**/packages/**/*.js' && npm run lint:sass",
-    "lint:sass": "sass-lint '**/packages/**/scss/**/*.scss' --verbose --no-exit",
-    "lint:js": "eslint '**/packages/**/*.js'",
+    "lint": "util-eslint-runner --name 'lint:js' --pattern 'toolkits/**/packages/**/*.js' && npm run lint:sass",
+    "lint:sass": "sass-lint 'toolkits/**/packages/**/scss/**/*.scss' --verbose --no-exit",
+    "lint:js": "eslint 'toolkits/**/packages/**/*.js'",
     "publish": "sn-package-publish",
     "test": "jest --colors --coverage --passWithNoTests",
     "test:ci": "jest --passWithNoTests --runInBand",
