extra config for tests, fix linting errors

--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
     ],
     "coveragePathIgnorePatterns": [
       "docs/"
+    ],
+    "restoreMocks": true,
+	  "transformIgnorePatterns": [
+		  "/node_modules/(?!(@springernature/global-context))/"
     ]
   },
   "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml"
