--- a/toolkits/springer/packages/springer-context/package.json
+++ b/toolkits/springer/packages/springer-context/package.json
@@ -2,7 +2,7 @@
   "name": "@springernature/springer-context",
   "version": "12.2.1",
   "license": "MIT",
-  "description": "Boostrapping for all Springer components and products",
+  "description": "Bootstrapping for all Springer components and products",
   "keywords": [
     "components",
     "elements",
@@ -12,7 +12,7 @@
     "js"
   ],
   "author": "Springer Nature",
-  "extendsPackage": "global-context@9.1.1",
+  "extendsPackage": "global-context@9.1.2",
   "peerDependencies": {
     "rfs": "^8.0.4"
   }
