--- a/toolkits/nature/packages/nature-banner/package.json
+++ b/toolkits/nature/packages/nature-banner/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@springernature/nature-banner",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "description": "",
   "keywords": [],
   "author": "Springer Nature",
+  "extendsPackage": "global-banner@0.1.1",
   "peerDependencies": {
-    "@springernature/global-banner" : "~0.1.0"
+    "@springernature/nature-context": "~0.21.0"
   }
 }
