--- a/toolkits/nature/packages/nature-card/package.json
+++ b/toolkits/nature/packages/nature-card/package.json
@@ -7,5 +7,8 @@
   "author": "Springer Nature",
   "extendsPackage": {
     "@springernature/global-card" : "~0.1.1"
+  },
+  "peerDependencies": {
+    "@springernature/nature-context": "^0.18.2"
   }
 }
