--- a/toolkits/springer/packages/springer-card/package.json
+++ b/toolkits/springer/packages/springer-card/package.json
@@ -7,5 +7,8 @@
   "author": "Springer Nature",
   "extendsPackage": {
     "@springernature/global-card" : "~0.1.1"
+  },
+  "peerDependencies": {
+    "@springernature/springer-context": "^12.3.0"
   }
 }
