--- a/toolkits/springer/packages/springer-ad/package.json
+++ b/toolkits/springer/packages/springer-ad/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@springernature/springer-ad",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "description": "adverts",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "peerDependencies": {
+    "@springernature/springer-context": "^12.4.0"
+  }
 }
