--- a/toolkits/springer/packages/springer-header/package.json
+++ b/toolkits/springer/packages/springer-header/package.json
@@ -4,5 +4,9 @@
   "license": "MIT",
   "description": "Publisher level header",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "dependencies": {
+    "@springernature/global-context": "~2.3.0",
+    "@springernature/springer-dropdown": "~1.2.2"
+  }
 }
