--- a/toolkits/springer/packages/springer-listing/package.json
+++ b/toolkits/springer/packages/springer-listing/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@springernature/springer-listing",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "description": "Display of scannable content typically within a list",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "peerDependencies": {
+    "@springernature/springer-context": "^14.0.0"
+  }
 }
