--- a/toolkits/springer/packages/springer-user-metadata/package.json
+++ b/toolkits/springer/packages/springer-user-metadata/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@springernature/springer-user-metadata",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "MIT",
   "description": "Meta data for user such as login status, ip address, business partner associations and chinese icp licence status",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "peerDependencies": {
+    "@springernature/springer-context": "^14.0.0"
+  }
 }
