--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,10 @@
 		"@springernature/eslint-config/node",
 		"@springernature/eslint-config/jest"
 	],
-  "parserOptions": {
-    "ecmaVersion": 9
-  }
+	"parserOptions": {
+		"ecmaVersion": 9
+	},
+	"rules": {
+		"import/no-unresolved": "off"
+	}
 }
