--- a/toolkits/springer/packages/springer-media/package.json
+++ b/toolkits/springer/packages/springer-media/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@springernature/springer-media",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "A media component catering for an image, title and body text. Styles have also been included to add a play button for things like videos.",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "peerDependencies": {
+    "@springernature/springer-context": "17.0.3"
+  }
 }
