--- a/toolkits/springer/packages/springer-buttons/package.json
+++ b/toolkits/springer/packages/springer-buttons/package.json
@@ -5,7 +5,7 @@
   "description": "Springer branding for global-buttons",
   "keywords": ["buttons"],
   "author": "Springer Nature",
-  "extendsPackage": "global-buttons@0.0.1",
+  "extendsPackage": "global-button@0.1.0",
   "peerDependencies": {
     "@springernature/springer-context": "^19.0.0"
   }
