--- a/toolkits/springer/packages/springer-button/package.json
+++ b/toolkits/springer/packages/springer-button/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "description": "Springer branding for global-buttons",
-  "keywords": ["buttons"],
+  "keywords": ["button"],
   "author": "Springer Nature",
   "extendsPackage": "global-button@0.1.0",
   "peerDependencies": {
