Builds popup html

--- a/toolkits/global/packages/global-popup/package.json
+++ b/toolkits/global/packages/global-popup/package.json
@@ -4,7 +4,6 @@
   "description": "Click a trigger element to build and display a popup based on html that it takes as an argument",
   "license": "MIT",
   "peerDependencies": {
-    "@springernature/global-context": "15.2.1",
-    "@springernature/global-expander": "^0.3.3"
+    "@springernature/global-context": "15.2.1"
   }
 }
