changes to the global-card component

--- a/toolkits/global/packages/global-card/package.json
+++ b/toolkits/global/packages/global-card/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "description": "card component",
-  "keywords": ["card"],
+  "keywords": [
+    "card"
+  ],
   "author": "Springer Nature",
   "peerDependencies": {
     "@springernature/global-context": "^11.0.0"
