--- a/toolkits/global/packages/global-card/package.json
+++ b/toolkits/global/packages/global-card/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.1",
   "license": "MIT",
   "description": "card component",
-  "keywords": ["card"],
+  "keywords": [
+    "card"
+  ],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/global-context": "^9.2.1"
-  }
+  "brandContext": "^1.0.0"
 }
