--- a/toolkits/springer/packages/springer-dropdown/package.json
+++ b/toolkits/springer/packages/springer-dropdown/package.json
@@ -5,10 +5,8 @@
   "description": "Display a contextual list of links controlled by a toggle",
   "keywords": [],
   "author": "Springer Nature",
+  "brandContext": "^2.0.0",
   "dependencies": {
-    "@springernature/global-context": "~12.0.0"
-  },
-  "peerDependencies": {
-    "@springernature/springer-context": "17.0.3"
+    "@springernature/global-javascript": "^2.0.0"
   }
 }
