update springer-ad to new brand-context

--- a/toolkits/springer/packages/springer-ad/package.json
+++ b/toolkits/springer/packages/springer-ad/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/springer-ad",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "adverts",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/springer-context": "^17.0.3"
-  }
+  "brandContext": "^2.1.1"
 }
