--- a/toolkits/springer/packages/springer-box/package.json
+++ b/toolkits/springer/packages/springer-box/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/springer-box",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "Springer box component",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/springer-context": "18.3.0"
-  }
+  "brandContext": "^2.1.1"
 }
