--- a/toolkits/springer/packages/springer-meta/package.json
+++ b/toolkits/springer/packages/springer-meta/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/springer-meta",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "Brief information about the content",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/springer-context": "^14.0.0"
-  }
+  "brandContext": "^2.1.1"
 }
