--- a/toolkits/springer/packages/springer-publisher-footer/package.json
+++ b/toolkits/springer/packages/springer-publisher-footer/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/springer-publisher-footer",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "license": "MIT",
   "description": "Springer branded site footer",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/springer-context": "18.2.3"
-  }
+  "brandContext": "^2.1.1"
 }
