--- a/toolkits/global/packages/global-button/package.json
+++ b/toolkits/global/packages/global-button/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "license": "MIT",
   "description": "Button styles to use on buttons and links",
-  "keywords": ["button"],
+  "keywords": [
+    "button",
+    "default",
+    "springer",
+    "nature"
+  ],
   "author": "Springer Nature",
   "brandContext": "^2.1.1"
 }
