--- a/toolkits/springernature/packages/springernature-modal/package.json
+++ b/toolkits/springernature/packages/springernature-modal/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "description": "Springer Nature branded modal pop-up window",
-  "keywords": ["modal", "pop-up"],
+  "keywords": [
+    "modal",
+    "pop-up"
+  ],
   "author": "Springer Nature",
   "brandContext": "^1.0.1"
 }
