--- a/toolkits/springer/packages/springer-pagination/package.json
+++ b/toolkits/springer/packages/springer-pagination/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@springernature/springer-pagination",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "A component for the controls of pagination",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/springer-context": "^19.1.0",
-    "@springernature/springer-button": "^0.1.0"
-  }
+  "brandContext": "^3.0.0"
 }
