--- a/toolkits/global/packages/global-autocomplete/package.json
+++ b/toolkits/global/packages/global-autocomplete/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@springernature/global-autocomplete",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "Autocomplete/suggest component",
   "keywords": [],
   "author": "Jon Stevens",
   "main": "js/index.js",
-  "peerDependencies": {
-    "@springernature/global-context": "^5.0.1"
-  }
+  "brandContext": "^3.0.0"
 }
