--- a/toolkits/global/packages/global-forms/package.json
+++ b/toolkits/global/packages/global-forms/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@springernature/global-forms",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"license": "MIT",
 	"description": "form component",
 	"keywords": [
 	  "css",
 	  "component"
 	],
-	"author": "Jack Watkins"
+  "author": "Jack Watkins",
+  "brandContext": "^3.0.0"
   }
