--- a/toolkits/global/packages/global-banner/package.json
+++ b/toolkits/global/packages/global-banner/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/global-banner",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "license": "MIT",
   "description": "Full width banner used for displaying informational messages",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/global-context": "^13.0.0"
-  }
+  "brandContext": "^3.0.0"
 }
