--- a/toolkits/global/packages/global-author-list/package.json
+++ b/toolkits/global/packages/global-author-list/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@springernature/global-author-list",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "Display a styled list of authors with comma separation",
   "keywords": [],
   "author": "Springer Nature",
-  "peerDependencies": {
-    "@springernature/global-context": "^9.2.1"
-  }
+  "brandContext": "^3.0.0"
 }
