Fleshes out positioning method further and calls in global-javascript dep correctly

--- a/toolkits/global/packages/global-popup/package.json
+++ b/toolkits/global/packages/global-popup/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "peerDependencies": {
     "@springernature/global-context": "15.2.1"
+  },
+  "dependencies": {
+    "@springernature/global-javascript": "^2.1.0"
   }
 }
