Removes redundant popup component and updates most tests

--- a/toolkits/global/packages/global-article/package.json
+++ b/toolkits/global/packages/global-article/package.json
@@ -6,6 +6,10 @@
   "peerDependencies": {
     "@springernature/global-context": "5.1.0"
   },
+  "dependencies": {
+    "@springernature/global-expander": "~1.2.0",
+    "@springernature/global-popup": "~0.1.0"
+  },
   "devDependencies": {
     "jquery": "^3.4.1"
   }
