--- a/toolkits/global/packages/global-article/package.json
+++ b/toolkits/global/packages/global-article/package.json
@@ -4,7 +4,9 @@
   "description": "Frontend package for article display",
   "license": "MIT",
   "peerDependencies": {
-    "@springernature/global-context": "5.1.0",
+    "@springernature/global-context": "5.1.0"
+  },
+  "dependencies": {
     "@springernature/global-expander": "~1.2.0",
     "@springernature/global-popup": "~0.1.0"
   },
