--- a/toolkits/global/packages/global-article/package.json
+++ b/toolkits/global/packages/global-article/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@springernature/global-article",
-  "version": "19.2.0",
+  "version": "20.0.0",
   "description": "Frontend package for article display",
   "license": "MIT",
   "peerDependencies": {
     "@springernature/global-context": "5.1.0"
+  },
+  "dependencies": {
+    "@springernature/global-expander": "~1.2.0",
+    "@springernature/global-popup": "~0.2.0"
   },
   "devDependencies": {
     "jquery": "^3.4.1"
