Move RFS to be internal to brand-context (#297)
* brand-context: copy and adapt rfs code into package

* Update rfs to match existing version and fix caching bugs

* end of line breaks

* add SASS tests for RFS mixin

* move tests to correct locations

* allow tests folder in context package

* brand-context: v4.0.0

* standardise spacing

* better defaults

--- a/context/brand-context/package.json
+++ b/context/brand-context/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@springernature/brand-context",
-  "version": "3.2.4",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "Bootstrapping for all components and products",
   "keywords": [],
-  "author": "Springer Nature",
-  "dependencies": {
-    "rfs": "^8.0.4"
-  }
+  "author": "Springer Nature"
 }
