Removes coverage report from every test run and install deps

--- a/context/brand-context/package.json
+++ b/context/brand-context/package.json
@@ -4,5 +4,8 @@
   "license": "MIT",
   "description": "Bootstrapping for all components and products",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "devDependencies": {
+    "@springernature/util-sass-compiler": "^0.1.0"
+  }
 }
