Revert "Removes coverage report from every test run and install deps"
This reverts commit fd8def9d01f5402da002ed82599419da94fc7e23.

--- a/context/brand-context/package.json
+++ b/context/brand-context/package.json
@@ -4,8 +4,5 @@
   "license": "MIT",
   "description": "Bootstrapping for all components and products",
   "keywords": [],
-  "author": "Springer Nature",
-  "devDependencies": {
-    "@springernature/util-sass-compiler": "^0.1.0"
-  }
+  "author": "Springer Nature"
 }
