ignore demo js for jest tests

--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
       "**/packages/**/*.js"
     ],
     "coveragePathIgnorePatterns": [
-      "docs/"
+      "docs/",
+      "demo/"
     ],
     "restoreMocks": true,
     "transformIgnorePatterns": [
