--- a/toolkits/springernature/packages/springernature-user-details/package.json
+++ b/toolkits/springernature/packages/springernature-user-details/package.json
@@ -5,5 +5,8 @@
   "description": "Springer Nature branded logged-in user details component",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^4.3.0"
+  "brandContext": "^4.3.0",
+  "dependencies": {
+    "@springernature/global-expander": "^2.0.2"
+  }
 }
