--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,5 @@ updates:
       # Check for npm updates on Sundays at 9am UTC
       day: "sunday"
       time: "09:00"
+    commit-message:
+      prefix: "[skip travis]"
