Add author to global-corporate-footer

--- a/toolkits/global/packages/global-corporate-footer/package.json
+++ b/toolkits/global/packages/global-corporate-footer/package.json
@@ -3,5 +3,6 @@
   "version": "1.0.0",
   "description": "corporate footer",
   "license": "MIT",
+  "author": "Springer Nature",
   "brandContext": "^6.0.0"
 }
