--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap:local": "lerna bootstrap --nohoist=** --no-ci",
     "build": "npm run lint && npm run test && npm run validate",
     "build:ci": "npm run lint && npm run test:ci && npm run validate -- -n",
+    "build:dependabot": "npm run lint && npm run test:ci",
     "create": "sn-package-create",
     "demo": "sn-package-demo",
     "lint": "util-eslint-runner --name 'lint:js' --pattern 'toolkits/**/packages/**/*.js' && npm run lint:sass",
