--- a/toolkits/global/packages/global-card/package.json
+++ b/toolkits/global/packages/global-card/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@springernature/global-card",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "license": "MIT",
   "description": "card component",
-  "keywords": ["card"],
+  "keywords": [
+    "card"
+  ],
   "author": "Springer Nature",
-  "brandContext": "^10.0.3"
+  "brandContext": "^10.1.0"
 }
