Actually update nature-header version

--- a/toolkits/global/packages/global-javascript/package.json
+++ b/toolkits/global/packages/global-javascript/package.json
@@ -2,7 +2,7 @@
   "name": "@springernature/global-javascript",
   "version": "3.0.2",
   "license": "MIT",
-  "description": "Globally shared Javascript helpers",
+  "description": "Globally shared JavaScript helpers",
   "keywords": [
     "javascript",
     "modules",
