--- a/toolkits/nature/packages/nature-sort-by/package.json
+++ b/toolkits/nature/packages/nature-sort-by/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@springernature/nature-header",
+  "name": "@springernature/nature-sort-by",
   "version": "1.0.0",
   "license": "MIT",
-  "description": "Publisher level header",
+  "description": "Nature sort by ui dropdown",
   "keywords": [],
   "author": "Springer Nature",
   "brandContext": "^11.1.0",
