--- a/toolkits/global/packages/global-dropdown/package.json
+++ b/toolkits/global/packages/global-dropdown/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@springernature/global-dropdown",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "Display a contextual list of links controlled by a toggle",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "16.0.0"
+  "brandContext": "16.0.0",
+  "dependencies": {
+    "@springernature/global-expander": "^4.0.2"
+  }
 }
