--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "validate:springer": "sn-package-validate -t springer",
     "validate:springernature": "sn-package-validate -t springernature",
     "tokens:generate": "node ./design-tokens/stu-build.js",
-    "tokens:clean": "npx rimraf **/00-tokens/"
+    "tokens:clean": "npx rimraf **/00-tokens/",
+    "clean": "npx rimraf node_modules/"
   },
   "bugs": {
     "url": "https://github.com/springernature/frontend-toolkits/issues"
