--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
     "jest": "^26.4.2",
     "lerna": "^3.18.3",
     "sass-lint": "^1.13.1",
-    "style-dictionary": "^3.0.1",
-    "theo": "^8.1.5"
+    "style-dictionary": "^3.1.1"
   },
   "jest": {
     "testURL": "http://localhost/",
