adds design tokens

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
     "validate:springer": "sn-package-validate -t springer",
-    "validate:springernature": "sn-package-validate -t springernature"
+    "validate:springernature": "sn-package-validate -t springernature",
+    "tokens:generate": "node ./design-tokens/build.js",
+    "tokens:clean": "npx rimraf **/00-tokens/",
+    "node_modules:clean": "npx rimraf node_modules/"
   },
   "bugs": {
     "url": "https://github.com/springernature/frontend-toolkits/issues"
@@ -60,7 +63,8 @@
     "eslint-plugin-unicorn": "^13.0.0",
     "jest": "^26.4.2",
     "lerna": "^3.18.3",
-    "sass-lint": "^1.13.1"
+    "sass-lint": "^1.13.1",
+    "style-dictionary": "^3.1.1"
   },
   "jest": {
     "testURL": "http://localhost/",
