relative and almost component tokens done - still wip

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "validate:nature": "sn-package-validate -t nature",
     "validate:springer": "sn-package-validate -t springer",
     "validate:springernature": "sn-package-validate -t springernature",
-    "tokens:literal": "node ./design-tokens/build.js",
+    "tokens:literal": "node ./design-tokens/build-literal.js",
     "tokens:relative": "node ./design-tokens/build-relative.js",
+    "tokens:component": "node ./design-tokens/build-component.js",
     "tokens:clean": "npx rimraf **/00-tokens/",
     "node_modules:clean": "npx rimraf node_modules/"
   },
