Move shared javascript into the brand-context (#715)
* add global-javascript and expander

* spacing issue with readme

* update package manager to allow js in the brand-context

* brand-context v20.1.0

* tweak history wording to appease the travis gods

--- a/context/brand-context/package.json
+++ b/context/brand-context/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@springernature/brand-context",
-  "version": "20.0.3",
+  "version": "20.1.0",
   "license": "MIT",
   "description": "Bootstrapping for all components and products",
   "keywords": [],
-  "author": "Springer Nature"
+  "author": "Springer Nature",
+  "main": "./default/js/helpers/index.js"
 }
