--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 		"ecmaVersion": 9
 	},
 	"rules": {
-		"import/no-unresolved": "off"
+		"import/no-unresolved": "off",
+		"import/no-extraneous-dependencies": ["off"]
 	}
 }
