--- a/toolkits/global/packages/global-dropdown/package.json
+++ b/toolkits/global/packages/global-dropdown/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@springernature/global-dropdown",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "license": "MIT",
   "description": "Display a contextual list of links controlled by a toggle",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^18.0.0",
-  "dependencies": {
-    "@springernature/global-expander": "^4.0.2"
-  }
+  "brandContext": "^20.1.1"
 }
