--- a/toolkits/nature/packages/nature-header/package.json
+++ b/toolkits/nature/packages/nature-header/package.json
@@ -1,13 +1,9 @@
 {
   "name": "@springernature/nature-header",
-  "version": "7.1.4",
+  "version": "8.0.0",
   "license": "MIT",
   "description": "Publisher level header",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^18.0.0",
-  "dependencies": {
-    "@springernature/global-javascript": "^3.0.3",
-    "@springernature/global-expander": "^4.2.1"
-  }
+  "brandContext": "^20.1.1"
 }
