--- a/toolkits/springernature/packages/springernature-user-details/package.json
+++ b/toolkits/springernature/packages/springernature-user-details/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@springernature/springernature-user-details",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "license": "MIT",
   "description": "Springer Nature branded logged-in user details component",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^18.0.0",
-  "dependencies": {
-    "@springernature/global-expander": "^2.0.2"
-  }
+  "brandContext": " v20.1.1"
 }
