Drop `global-expander` and `global-javascript` (#726)
* update global-dropdown pt1

* add context-installer

* Update global-popup to latest context

* update global-facet

* Update the context installer to allow installing for a single package

* update nature-header and readmes

* update nature-sort-by

* fix bug in submission header readme

* update global-author-list

* update global-popup verison

* update springer-dropdown

* update springernature-user-details

* remove global-expander and global-javascript

* add deprecated messaging

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   ],
   "author": "Springer Nature",
   "scripts": {
-    "bootstrap": "lerna bootstrap --hoist",
-    "bootstrap:local": "lerna bootstrap --nohoist=** --no-ci",
+    "bootstrap": "npm run context && lerna bootstrap --hoist",
+    "bootstrap:local": "npm run context && lerna bootstrap --nohoist=** --no-ci",
     "build": "npm run lint && npm run test && npm run validate",
     "build:ci": "npm run lint && npm run test:ci && npm run validate -- -n",
+    "context": "sn-context-installer -p ./toolkits/",
     "create": "sn-package-create",
     "demo": "sn-package-demo",
     "lint": "util-eslint-runner --name 'lint:js' --pattern 'toolkits/**/packages/**/*.js' && npm run lint:sass",
@@ -48,6 +49,7 @@
     "@springernature/eslint-config": "^4.0.1",
     "@springernature/frontend-package-manager": "^8.3.0",
     "@springernature/sasslint-config": "^1.2.1",
+    "@springernature/util-context-installer": "^0.3.0",
     "@springernature/util-eslint-runner": "^0.0.3",
     "@springernature/util-sass-compiler": "^0.1.0",
     "acorn": "^7.1.0",
