--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "validate:springer": "sn-package-validate -t springer",
     "validate:springernature": "sn-package-validate -t springernature",
     "tokens:global": "node ./design-tokens/build-global.js",
-    "tokens:alias": "node ./design-tokens/build-alias.js",
-    "tokens:component": "node ./design-tokens/build-component.js",
+    "tokens:alias": "npm run tokens:clean && node ./design-tokens/build-alias.js",
+    "tokens:component": "npm run tokens:clean && npm run tokens:alias node ./design-tokens/build-component.js",
     "tokens:clean": "npx rimraf **/00-tokens/",
     "node_modules:clean": "npx rimraf node_modules/"
   },
